tests/zrun/bad/1.zls
let fff () returns (o init 42)
  o = 2 + last o
